tests/cases/vectors/errors/vector-reserve-const-negative.ari
const CAPACITY: i64 = -1;

fn main() -> i64 {
  var values: Vec[i64] = [];
  values.reserve(CAPACITY);
  return 0;
}
